--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,23 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    androidTestCompile("com.android.support.test.espresso:espresso-core:2.2.2", {
+        exclude group: "com.android.support", module: "support-annotations"
     })
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
+    androidTestCompile('com.android.support.test.espresso:espresso-intents:2.2.2', {
+        exclude group: "com.android.support", module: "support-annotations"
+    })
+
+
     androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
@@ -55,8 +68,11 @@ dependencies {
     compile "com.jakewharton.timber:timber:4.5.1"
     compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
     compile "android.arch.persistence.room:rxjava2:1.0.0-alpha3"
+    testCompile "org.mockito:mockito-core:2.7.22"
+    androidTestCompile "org.mockito:mockito-android:2.7.22"
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor "org.parceler:parceler:1.1.8"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
+
 }
